Load and save - yes or no buttons started

--- a/index.html
+++ b/index.html
@@ -38,15 +38,37 @@
                     <div class = "sidebarElement">
                         <label for="settings">Load:</label>
                         <select id="droplistLoad">
-                            <!-- <option value="horizontal bars">SZETTINGS</option> -->
+                            <!-- SAVED SETTINGS - FILLED WITH JS -->
                         </select>
 
-                        <div class="saveLoadButton" id="loadButton"> LOAD
+                        <div class="flexContainer" id="loadDeleteContainer">
+                            <div class="saveLoadButton" id="loadButton"> LOAD
+                            </div>
+                            <div class="saveLoadButton" id="deleteButton"> DELETE
+                            </div>
+                        </div>
+
+                        <div class="saveLoadMessage" id="deleteMessage">
+                        </div>
+
+                        <div class="flexContainer" id="deleteYesNoContainer">
+                            <div class="yesNoButton" id="deleteYesButton"> YES
+                            </div>
+                            <div class="yesNoButton" id="deleteNoButton"> NO
+                            </div>
                         </div>
 
                         <input type="text" id="saveTextInput" />
-
+                        <div class="saveLoadMessage" id="overwriteMessage">
+                        </div>
                         <div class="saveLoadButton" id="saveButton"> SAVE
+                        </div>
+
+                        <div class="flexContainer" id="saveYesNoContainer">
+                            <div class="yesNoButton" id="saveYesButton"> YES
+                            </div>
+                            <div class="yesNoButton" id="saveNoButton"> NO
+                            </div>
                         </div>
 
                     </div>
