Settings CRUD fully implemented

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                             <!-- SAVED SETTINGS - FILLED WITH JS -->
                         </select>
 
+                        <div class="saveLoadMessage" id="loadDeleteMessage">
+                        </div>
+
                         <div class="flexContainer" id="loadDeleteContainer">
                             <div class="saveLoadButton" id="loadButton"> LOAD
                             </div>
                             <div class="saveLoadButton" id="deleteButton"> DELETE
                             </div>
-                        </div>
-
-                        <div class="saveLoadMessage" id="deleteMessage">
                         </div>
 
                         <div class="flexContainer" id="deleteYesNoContainer">
@@ -60,8 +60,10 @@
                     <!-- SAVE -->
                     <div class = "sidebarElement"> Save as
                         <input type="text" id="saveTextInput" />
+
                         <div class="saveLoadMessage" id="overwriteMessage">
                         </div>
+                        
                         <div class="flexContainer" id="saveContainer">
                             <div class="saveLoadButton" id="saveButton"> SAVE
                             </div>
