Minor tweaks - background, max-mix etc.

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                         </div>
                     </div>
                     <div class = "sidebarElement"> 
-                        <div class="slider">
+                        <div class="slider" title="Computationally expensive!">
                             <p>Blur</p>
                             <span>
                                 <input id="shadowBlur" type="range" value="0" min="0" max="420" step="0.1" data-field="shadowBlur" />
