Import json works with empty local storage

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
                     <!-- IMPORT JSON -->
                     <div class = "sidebarElement"> Import
                         <br>
-                        <input type = "file" id="jsonFileInput" accept="application/JSON"></input>
+                        <input type = "file" id="jsonFileInput" accept="application/JSON">
+                        </input>
+                        <div class="saveLoadMessage" id="importMessage">
+                        </div>
                     </div>
                 </div>
             </div>
