--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 <body>
-    <div id="openMenuButton" class="showHideButton fa-solid fa-sliders">
+    <div id="openSidebarButton" class="showHideButton fa-solid fa-sliders">
     </div>
     <div id="openAudioButton" class="showHideButton fa-regular fa-circle-play">
     </div>
@@ -26,7 +26,7 @@
             <!-- <audio id="audioPlayer" src="spell.wav" controls loop></audio> -->
             <audio id="audioPlayer" controls loop></audio>
         </div>
-        <div id="hideMenuButton" class="showHideButton fa-solid fa-angles-left">
+        <div id="hideSidebarButton" class="showHideButton fa-solid fa-angles-left">
         </div>
         <div class="resizer"> 
         </div>
