Sample settings presets JSON added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- _______________________________________ SAVE AND LOAD _______________________________________ -->
                 <div class="sidebarInsideCategoryElements" id="sidebarInsideCategoryElements0">
                     <!-- IMPORT JSON -->
-                    <div class = "sidebarElement"> Import File
+                    <div class = "sidebarElement" title="Import JSON settings file from your device"> Import File
                         <br>
                         <input type = "file" id="jsonFileInput" accept="application/JSON">
                         </input>
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <!-- IMPORT SAMPLE PRESETS -->
-                    <div class = "sidebarElement"> Sample presets
+                    <div class = "sidebarElement"> Sample settings
                         <div class="flexContainer">
                             <div class="saveLoadButton" id="addSamplePresetsButton"> ADD
                             </div>
