Disabled FPS check when there is no animation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="fpsContainer" title="Animation frames per second"> 
             <div id="fpsText">FPS
             </div>
-            <div id="fpsValue">0
+            <div id="fpsValue">-
             </div>
         </div>
 
